0.27_dev
-refactor mouse positioning.
-add mouse get_focused method.
-revise surface methods for vector arg.

0.27    2025-01-18
-revise to permit import in python.
-revise canvas element.
-revise surface alpha.
-update transform to preserve surface alpha.
-export module name variable.
-revise dict item remove statement for opov issue.
-revise JS object instantiate statement for opov issue.
-add noopov to ensure sprite group iter for opov issue.
-revise draw color handling.
-add vector copy method.
-refactor vector to optimize.
-revise mixer set_num_channels method.
-refactor mixer music rewind method.
-revise mixer channel play promise handling.
-refactor mixer audio object.
-refactor pyjsarray for performance.
-add activeevent.
-add closeevent.
-add display set_icon.
-update color object.
-update rect comparison methods.
-revise vector methods for tuple argument.
-revise sprite to optimize.
-revise for javascript interoperability.
-revise vector elementwise object.
-revise vector operator methods.
-revise vector object instantiation.

0.26    2022-04-18
-revise textarea object.
-revise mouse set_cursor method.
-update surface blit with optional rect return.
-revise time set_timer method.
-add str count method.
-add str splitlines method.
-add surface tostring method.
-revise canvas clear method.
-add surface alpha methods.
-add surface blits method.
-refactor surface blit to optimize.
-revise surface resize.
-refactor rect to optimize.
-refactor mask to optimize.
-refactor time to optimize.
-refactor transform to optimize.
-refactor sprite to optimize.
-refactor sprite collide to optimize.

0.25    2021-11-30
-create pyjsdl-ts port.
-revise module for transcrypt.
-revise sprite orderedupdates.
-revise font render.
-update surface blit for rect arg.
-add sprite group alias.
-revise surface setpixel.
-revise color arg processing.
-refactor sprite collide methods.
-revise imageloader processing.
-revise sprite groupcollide for dict obj key.