@@ -2,6 +2,7 @@
 -refactor mouse positioning.
 -add mouse get_focused method.
 -revise surface methods for vector arg.
+-add display resize method.
 
 0.27    2025-01-18
 -revise to permit import in python.
